fixed overflow issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -454,6 +454,7 @@ span#closeBtn:hover {
 
 .task__container-mid.show {
   gap: 16px;
+  overflow: visible;
   opacity: 1;
   max-height: 400px;
   margin: 4px 0px;
